# FetchDock

./: .gitignore  README.ja.md  README.ko.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
browser-extension/: manifest.json
browser-extension/error/: error.html  error.js
browser-extension/options/: options.html  options.js
browser-extension/popup/: popup.html  popup.js
browser-extension/shared/: background.js  extension.css
docs/: ACCEPTANCE.md  API_CONTRACTS.md  ARCHITECTURE.md  BUILD.md  CAPABILITY_MAP.md  CHANGELOG.md  FUNCTION_PARITY.md
packaging/flatpak/: dev.fetchdock.desktop.desktop  dev.fetchdock.desktop.metainfo.xml  dev.fetchdock.desktop.yml
packaging/macos/: README.md
scripts/: package-windows-portable.ps1  verify-browser-extension.ps1  verify-fast.ps1  verify-media-clip.ps1  verify-originality-boundary.ps1  verify-project-boundary.ps1  verify-release-packaging.ps1  verify-windows-portable.ps1  verify-windows.ps1
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  capture.ts  commandPalette.ts  downloadsView.ts  i18n.ts  navigation.ts  settingsView.ts  (+8 more)
tests/: api.test.ts  capture.test.ts  downloadsView.test.ts  i18n.test.ts  navigation.test.ts  settingsView.test.ts  subtitleOptions.test.ts  subtitleWorkshop.test.ts  taskCreateOptions.test.ts  thumbnailOptions.test.ts  toolSettings.test.ts  videoClipForm.test.ts  waveformTimeline.test.ts
