[package]
name = "fetchdock"
version = "0.1.0"
description = "FetchDock desktop application"
authors = ["FetchDock Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "fetchdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
thiserror = "2.0"
